// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Result Table should match snapshot when results are full 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg css-1gqkjvp-MuiContainer-root"
      >
        <div
          class="MuiTableContainer-root css-70zvr5-MuiTableContainer-root"
        >
          <table
            class="MuiTable-root css-1xwxv7r-MuiTable-root"
          >
            <thead
              class="MuiTableHead-root css-1a7iywq-MuiTableHead-root"
            >
              <tr
                class="MuiTableRow-root MuiTableRow-head css-knhdqb-MuiTableRow-root"
              >
                <th
                  class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-j77fgu-MuiTableCell-root"
                  scope="col"
                >
                  Account Name
                </th>
                <th
                  class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-j77fgu-MuiTableCell-root"
                  scope="col"
                >
                  Yearly Interest
                </th>
                <th
                  class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-j77fgu-MuiTableCell-root"
                  scope="col"
                >
                  Effective Interest Rate
                </th>
                <th
                  class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-j77fgu-MuiTableCell-root"
                  scope="col"
                >
                  Webpage
                </th>
                <th
                  class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-j77fgu-MuiTableCell-root"
                  scope="col"
                >
                  Remarks
                </th>
                <th
                  class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-j77fgu-MuiTableCell-root"
                  scope="col"
                >
                  Updated at
                </th>
              </tr>
            </thead>
            <tbody
              class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
            >
              <tr
                class="MuiTableRow-root css-knhdqb-MuiTableRow-root"
              >
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1mmjt0s-MuiTableCell-root"
                >
                  UOB Bank
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1mmjt0s-MuiTableCell-root"
                >
                  1000
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1mmjt0s-MuiTableCell-root"
                >
                  NaN
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1mmjt0s-MuiTableCell-root"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1yzuh6z-MuiTypography-root-MuiLink-root"
                    href="https://jh123x.com"
                    target="_blank"
                  >
                    Official Website
                  </a>
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1mmjt0s-MuiTableCell-root"
                >
                  Testing remarks
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1mmjt0s-MuiTableCell-root"
                />
              </tr>
            </tbody>
          </table>
        </div>
        <span
          class="MuiTypography-root MuiTypography-caption css-dkd32u-MuiTypography-root"
        >
          * Interest rates on their respective websites are subject to change without notice
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg css-1gqkjvp-MuiContainer-root"
    >
      <div
        class="MuiTableContainer-root css-70zvr5-MuiTableContainer-root"
      >
        <table
          class="MuiTable-root css-1xwxv7r-MuiTable-root"
        >
          <thead
            class="MuiTableHead-root css-1a7iywq-MuiTableHead-root"
          >
            <tr
              class="MuiTableRow-root MuiTableRow-head css-knhdqb-MuiTableRow-root"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-j77fgu-MuiTableCell-root"
                scope="col"
              >
                Account Name
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-j77fgu-MuiTableCell-root"
                scope="col"
              >
                Yearly Interest
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-j77fgu-MuiTableCell-root"
                scope="col"
              >
                Effective Interest Rate
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-j77fgu-MuiTableCell-root"
                scope="col"
              >
                Webpage
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-j77fgu-MuiTableCell-root"
                scope="col"
              >
                Remarks
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-j77fgu-MuiTableCell-root"
                scope="col"
              >
                Updated at
              </th>
            </tr>
          </thead>
          <tbody
            class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
          >
            <tr
              class="MuiTableRow-root css-knhdqb-MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1mmjt0s-MuiTableCell-root"
              >
                UOB Bank
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1mmjt0s-MuiTableCell-root"
              >
                1000
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1mmjt0s-MuiTableCell-root"
              >
                NaN
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1mmjt0s-MuiTableCell-root"
              >
                <a
                  class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1yzuh6z-MuiTypography-root-MuiLink-root"
                  href="https://jh123x.com"
                  target="_blank"
                >
                  Official Website
                </a>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1mmjt0s-MuiTableCell-root"
              >
                Testing remarks
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1mmjt0s-MuiTableCell-root"
              />
            </tr>
          </tbody>
        </table>
      </div>
      <span
        class="MuiTypography-root MuiTypography-caption css-dkd32u-MuiTypography-root"
      >
        * Interest rates on their respective websites are subject to change without notice
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Result Table should match snapshot when results is empty 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg css-1gqkjvp-MuiContainer-root"
      >
        <div
          class="MuiTableContainer-root css-70zvr5-MuiTableContainer-root"
        >
          <table
            class="MuiTable-root css-1xwxv7r-MuiTable-root"
          >
            <thead
              class="MuiTableHead-root css-1a7iywq-MuiTableHead-root"
            >
              <tr
                class="MuiTableRow-root MuiTableRow-head css-knhdqb-MuiTableRow-root"
              >
                <th
                  class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-j77fgu-MuiTableCell-root"
                  scope="col"
                >
                  Account Name
                </th>
                <th
                  class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-j77fgu-MuiTableCell-root"
                  scope="col"
                >
                  Yearly Interest
                </th>
                <th
                  class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-j77fgu-MuiTableCell-root"
                  scope="col"
                >
                  Effective Interest Rate
                </th>
                <th
                  class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-j77fgu-MuiTableCell-root"
                  scope="col"
                >
                  Webpage
                </th>
                <th
                  class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-j77fgu-MuiTableCell-root"
                  scope="col"
                >
                  Remarks
                </th>
                <th
                  class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-j77fgu-MuiTableCell-root"
                  scope="col"
                >
                  Updated at
                </th>
              </tr>
            </thead>
            <tbody
              class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
            />
          </table>
        </div>
        <span
          class="MuiTypography-root MuiTypography-caption css-dkd32u-MuiTypography-root"
        >
          * Interest rates on their respective websites are subject to change without notice
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg css-1gqkjvp-MuiContainer-root"
    >
      <div
        class="MuiTableContainer-root css-70zvr5-MuiTableContainer-root"
      >
        <table
          class="MuiTable-root css-1xwxv7r-MuiTable-root"
        >
          <thead
            class="MuiTableHead-root css-1a7iywq-MuiTableHead-root"
          >
            <tr
              class="MuiTableRow-root MuiTableRow-head css-knhdqb-MuiTableRow-root"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-j77fgu-MuiTableCell-root"
                scope="col"
              >
                Account Name
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-j77fgu-MuiTableCell-root"
                scope="col"
              >
                Yearly Interest
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-j77fgu-MuiTableCell-root"
                scope="col"
              >
                Effective Interest Rate
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-j77fgu-MuiTableCell-root"
                scope="col"
              >
                Webpage
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-j77fgu-MuiTableCell-root"
                scope="col"
              >
                Remarks
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-j77fgu-MuiTableCell-root"
                scope="col"
              >
                Updated at
              </th>
            </tr>
          </thead>
          <tbody
            class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
          />
        </table>
      </div>
      <span
        class="MuiTypography-root MuiTypography-caption css-dkd32u-MuiTypography-root"
      >
        * Interest rates on their respective websites are subject to change without notice
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
